Moved footer up to make sure it is displayed on smaller screens
The footer still wasn’t always being displayed on smaller screens with
normal scrolling behavior. I think this is due to the fact that it’s
all the way on the bottom of the screen. By moving it up 20px I think
the problem should be fixed.

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -6,6 +6,7 @@
   height: 50px;
   width: 100%;
   margin-top: 100px;
+  margin-bottom: 20px;
   background-color: transparent;
   text-align: center;
 }
