--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,7 @@ img, button {
   height: 50px;
   width: 100%;
   margin-top: 100px;
+  margin-bottom: 20px;
   background-color: transparent;
   text-align: center; }
 
